Fix button style on iOS

--- a/css/components/_base.styl
+++ b/css/components/_base.styl
@@ -188,6 +188,7 @@ body {
 
   .button {
     transition: .4s all ease;
+    -webkit-appearance: none;
     color: white;
     cursor: pointer;
     margin: auto;
@@ -313,7 +314,6 @@ body {
       @media PHONE_AND_TABLET {
         display: block;
         text-align center;
-        font-size: 2em;
       }
     }
 
